# palette-extractor

./: README.md  cluster.hpp  gruvbox-material-palette.txt  image.cpp  image.hpp  kmeans.cpp  main.cpp  meson.build  meson_options.txt  operations.cpp  operations.hpp  stb_image.h
palettes/: hex_to_rgb.py  nord.txt
